<resources>
    <string name="app_name">25_29_ContentProviderTest</string>
    <string name="list_courses">Список курсов</string>
    <string name="get_course_by_id">Узнать курс по ID</string>
    <string name="create_random_course">Создать случайный курс</string>
    <string name="delete_course_by_id">Удалить курс по ID</string>
    <string name="delete_all_courses">Удалить все курсы</string>
    <string name="update_course_by_id">Обновить курс по ID</string>
    <string name="save_bunch_courses">Создать несколько курсов</string>
    <string name="input_id">Введите ID</string>
    <string name="get_course">Получить курс</string>
    <string name="existing_id">Введите существующий ID</string>
    <string name="update_course_title">Введите новое название курса</string>
    <string name="update_course_duration">Введите новую продолжительность курса в секундах</string>
</resources>