<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/listCoursesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_courses" />

    <Button
        android:id="@+id/getCourseByIDButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_course_by_id" />

    <Button
        android:id="@+id/createRandomCourseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_random_course" />

    <Button
        android:id="@+id/deleteCourseByIDButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_course_by_id" />

    <Button
        android:id="@+id/deleteAllCoursesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_all_courses" />

    <Button
        android:id="@+id/updateCourseByIDButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_course_by_id" />

</LinearLayout>